# autonomous_vehicles

./: .github  .gitignore  README.md  books_notes.md  courses.md  links.md  notebooks_and_projects.md  useful_posts.md  useful_videos.md
architectures/: autonomous_driving_components.uxf  functional_architectures_autonomous_driving_review.docx  hierarchical_paradigm.odt  model_based_systems_engineering.docx
autonomous_vehicles_notes/appendices/: coordinate_transofrmations.tex  glossary.tex  notes.tex  reference_frames.tex
autonomous_vehicles_notes/control_notes/: section.tex
autonomous_vehicles_notes/deep_learning_notes/: feed_forward_neural_nets_autononmous_vehicles.tex  feed_forward_nn.tex  gradient_based_learning.tex
autonomous_vehicles_notes/environment_representation/: hardware_configuration.tex  section.tex
autonomous_vehicles_notes/environment_representation_notes/: notes.tex
autonomous_vehicles_notes/examples/: examples_I.tex
autonomous_vehicles_notes/hardware/: hardware.tex  hardware_configuration.tex  notes.tex
autonomous_vehicles_notes/hardware_notes/: gnss_principles.tex  hardware.tex  inertial_measurement_unit.tex  lidar_principles.tex  notes.tex  references.bbl  sensor_calibration.tex  sensor_noise_and_aliasing.tex
autonomous_vehicles_notes/intro_notes/: answer_questions.tex  intro.tex  intro_self_driving_cars.tex  notes.tex  notes.toc  references.bbl
autonomous_vehicles_notes/kalman_filters_notes/: error_state_extended_kalman_filter.tex  extended_kalman_filters.tex  gaussian_filters_and_moment_matching.tex  kalman_filters.tex  nomencl.sty  (+5 more)
chronos_sims/vehicle_straight_line_sim/: CMakeLists.txt  demo.cpp  demo_data.h  main.cpp
model_based_engineering_notes/: notes.tex  notes_bbl.bbl
(+205 files in other folders)
